tests/integrations/basic-fail/tests/actual_tests_bless/no_main_manual.rs
//@compile-flags: --crate-type=bin

pub fn foo() {}
